# osqp

./: .gitignore  CMakeLists.txt
algebra/opencl/: CMakeLists.txt  algebra_libs.c  algebra_types.h  matrix.c  vector.c
algebra/opencl/include/: clwrapper.c  opencl_alloc.h  opencl_csr.h  opencl_handler.h  opencl_helper.h  opencl_lin_alg.h
algebra/opencl/kernel/: csr_matrix.cl  lin_algebra.cl
algebra/opencl/src/: opencl_alloc.c  opencl_csr.c  opencl_handler.c  opencl_lin_alg.c
configure/: osqp_configure.h.in
tests/: README.md  requirements.txt
tests/lin_alg/: test_lin_alg.h  test_matrix.cpp
